--- a/html/blog.html
+++ b/html/blog.html
@@ -13,8 +13,6 @@
         <header><h2>Blog</h2></header>
         <section>
             <div class="blog">
-                <h3>KNOW ABOUT ME</h3>
-                <hr>
                 <div class="table-container">
                     <table>
                         <thead>
@@ -202,5 +200,6 @@
                 </table>
             </div>
         </section>
+    <script src="../javascript/script.js"></script>
     </body>
 </html>
