--- a/index.html
+++ b/index.html
@@ -53,8 +53,21 @@
         <P>Instagram: <a href="https://www.instagram.com/jacksonwu1224wmms/" target="_blank">JacksonWu1224wmms</a></P>
         <p>Facebook: <a href="https://www.facebook.com/profile.php?id=100018745474835" target="_blank">巫佳祐</a></p>
     </div>
-    <div id="projects">
-        <h3>Project</h3>
+    <div style="font-family:Consolas,monospace;">
+    <span style="background:#f7f7f7; padding:4px 8px; border-radius:4px; display:inline-block;">
+        <span style="color:blue;">#include</span> &lt;bits/stdc++.h&gt;<br>
+        <span style="color:blue;">int</span> main(){<br>
+        if(<span style="color:#5e3c1b;">try</span>)<span style="color:purple;">{</span><br>
+            &nbsp;if(<span style="color:orange;">fail</span>)<br>
+            &nbsp;&nbsp;<span style="color:#13c602; font-weight:bold;">Learn</span>;<br>
+            &nbsp;else<br>
+            &nbsp;&nbsp;<span style="color:green; font-weight:bold;">Win</span>;<br>
+        <span style="color:purple;">}</span><br>
+        else<br>
+            &nbsp;<span style="color:red; font-weight:bold;">Lose</span>;<br>
+        return 0;<br>
+        }<br>
+    </span>
     </div>
 </section>
 
