--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </div>
         <div id="notes-list" class="notes-list">
             <a href="notes/network.pdf">Network</a>
+            <a href="notes/LA.pdf">LinearAlgebra</a>
             <a href="notes/system.pdf">System</a>
             <a href="notes/ai.pdf">AI</a>
         </div>
