--- a/html/blog.html
+++ b/html/blog.html
@@ -50,14 +50,58 @@
                         </tr>
                         </tbody>
                     </table>
-                    </div>
+                </div>
                     <hr>
                         <h3>The comparison-based sorting algorithm on n data requires \(&Omega;(nlogn)\) time</h3>
                         <h3>\(f(n)\)為polynomial-bounded\(\iff\) \(logf(n)=O(logn)\)</h3>
                         <h3>\(log(n!)=&Theta;(nlogn)\)</h3>
                         <h3>\(H(n)=1+1/2+1/3+1/4+...+1/n,&forall; n \in \mathbb{Z}^{+} , H(n)=&Theta;(logn)\)</h3>
                     <hr>
-                        For two arbitrary <span style="color: blue">infinitely countable</span> sets A and B, both \(2^A\) and \(2^B\) are <span style="color: blue">uncountable</span>.
+                        <h3>For two arbitrary <span style="color: blue">infinitely countable</span> sets A and B, both \(2^A\) and \(2^B\) are <span style="color: blue">uncountable</span>.</h3>
+                        <h2 style="text-align:center;">Truth Table</h2>
+                        <div class="table-container">
+                            <table>
+                                <thead>
+                                <tr>
+                                    <th>P</th>
+                                    <th>Q</th>
+                                    <th>Conjunction AND P&and;Q</th>
+                                    <th>Disjunction OR P&or;Q</th>
+                                    <th>Negation NOT ~P</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>T</td>
+                                    <td>T</td>
+                                    <td>T</td>
+                                    <td>T</td>
+                                    <td>F</td>
+                                </tr>
+                                <tr>
+                                    <td>T</td>
+                                    <td>F</td>
+                                    <td>F</td>
+                                    <td>T</td>
+                                    <td>F</td>
+                                </tr>
+                                <tr>
+                                    <td>F</td>
+                                    <td>T</td>
+                                    <td>F</td>
+                                    <td>T</td>
+                                    <td>T</td>
+                                </tr>
+                                <tr>
+                                    <td>F</td>
+                                    <td>F</td>
+                                    <td>F</td>
+                                    <td>F</td>
+                                    <td>T</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     <hr>
                         <h4>Different types of distances used in ML</h4>
                         <p><b>Minkowski distance:</b></p>
