--- a/html/progress.html
+++ b/html/progress.html
@@ -128,7 +128,7 @@
         <td></td ><!-- 114 -->
     </tr>
     <tr>
-        <th>政大</th>
+        <th><a href=政大.html>政大</a></th>
         <td>&#10004;</td ><!-- 105 -->
         <td></td ><!-- 106 -->
         <td></td ><!-- 107 -->
@@ -141,8 +141,8 @@
         <td></td ><!-- 114 -->
     </tr>
     <tr>
-        <th>師大</th>
-        <td></td ><!-- 105 -->
+        <th><a href="師大.html">師大</a></th>
+        <td>&#10004;</td ><!-- 105 -->
         <td></td ><!-- 106 -->
         <td></td ><!-- 107 -->
         <td></td ><!-- 108 -->
