--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
+    <title>.--...--..</title>
     <link rel="icon" href="photo/cardano.png">
     <link rel="stylesheet" href="css/styles.css">
 <body>
 
 <header>
     <button class="menu-button" onclick="toggleMenu()">☰</button>
-    <h2>Welcome to My Profile</h2>
+    <h2>PROFILE</h2>
 </header>
 
 <div id="sidebar" class="sidebar">
@@ -40,7 +40,7 @@
     <div class="profile-info">
         <img src="photo/IMG_0087.JPG" alt="Profile Picture" width="150">
         <div>
-            <h2>Hi, I'm Jackson!</h2>
+            <h2>I'm Jackson.</h2>
             <p>I'm enthusiast of all things tech. I love creating new things and learning new skills. I'm passionate about coding and software development.
                 Recently, I have been enthusiastic about blockchain.</p>
         </div>
