--- a/html/blog.html
+++ b/html/blog.html
@@ -57,6 +57,8 @@
                         <h3>\(log(n!)=&Theta;(nlogn)\)</h3>
                         <h3>\(H(n)=1+1/2+1/3+1/4+...+1/n,&forall; n \in \mathbb{Z}^{+} , H(n)=&Theta;(logn)\)</h3>
                     <hr>
+                        <h3>Open interval: \( \{ x \mid a < x < b \} \), 以\(\left( a,b \right)\)表示之, a ○───────○ b</h3>
+                        <h3>Closed interval: \( \{ x \mid a \le x \le b \} \), 以\(\left[ a,b \right]\)表示之,  a ●───────● b</h3>
                         <h3>For two arbitrary <span style="color: blue">infinitely countable</span> sets A and B, both \(2^A\) and \(2^B\) are <span style="color: blue">uncountable</span>.</h3>
                         <h2 style="text-align:center;">Truth Table</h2>
                         <div class="table-container">
@@ -102,6 +104,8 @@
                                 </tbody>
                             </table>
                         </div>
+                        <span style="white-space: pre;"><h3>           (a)onto                               (b)one-to-one                      (c)one-to-one且onto</h3></span>
+                        <img src="../photo/Surjection_Injection_Bijection-fr.svg">
                     <hr>
                         <h4>Different types of distances used in ML</h4>
                         <p><b>Minkowski distance:</b></p>
