--- a/html/blog.html
+++ b/html/blog.html
@@ -13,6 +13,10 @@
         <header><h2>Blog</h2></header>
         <section>
             <div class="blog">
+                <br>
+                <span style="text-decoration: underline;">In general, <span style="color:blue">hash table</span></span> (Suppose that the size of the hash table is much adequately larger than the maximum number of possible entries. Therefore, very few data collision occurs.)
+                <span style="text-decoration: underline;">is the most commonly used one for constructing a symbol table of a compiler.</span>
+                <hr>
                 <div class="table-container">
                     <table>
                         <thead>
