--- a/html/blog.html
+++ b/html/blog.html
@@ -93,7 +93,7 @@
                     <br>
                     <br>
                     <div style="display: inline-block; text-align: left; font-size: 15px;border: 2px solid #333;border-radius: 8px;background-color: #f9f9f9; line-height: 1;
-                                padding: 10px; "> 
+                                padding: 10px; ">
                         <div style="font-weight: 900; font-size: 20px; color: red">trap or interrupt flow :</div> 
                         <p style="font-weight: bold;">1.事件發生 (trap or interrupt issued)</p> 
                         → 當使用者程式執行異常、發出系統呼叫 (trap)，或外部裝置產生中斷 (interrupt) 時，會觸發此流程。 
@@ -192,6 +192,7 @@
                         </div>
                         <span style="white-space: pre;"><h3>           (a)onto                               (b)one-to-one                      (c)one-to-one且onto</h3></span>
                         <img src="../photo/Surjection_Injection_Bijection-fr.svg">
+                        <span style="display: inline-block; text-align: left;white-space: pre;"><h3>(a)\(onto: \forall \text{y} \in \text{Y}, &exist; \text{x} \in \text{X } \text{s.t.} \text{ f(x)=y}\)          (b)\(1-1: f(x_1)=f(x_2) \implies x_1=x_2\)</h3></span>
                     <hr>
                         <h4>Different types of distances used in ML</h4>
                         <p><b>Minkowski distance:</b></p>
