--- a/html/graph.html
+++ b/html/graph.html
@@ -1,10 +1,8 @@
-<!doctype html>
-<html lang="en">
+<html>
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="../photo/graph.png"
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="icon" href="../photo/graph.png"/>
   <title>Graph Canvas</title>
   <link rel="stylesheet" href="../css/graph.css" />
 </head>
