--- a/html/blog.html
+++ b/html/blog.html
@@ -19,7 +19,7 @@
                 <br>
                 Memoization是一種優化技術,透過將函式執行後的結果暫存起來(快取)，當下次再次以相同參數呼叫時,就能直接從快取中提取結果,而無需重新計算,藉此提升程式執行速度。
                 <hr>
-                    <img src="../photo/pagetabletlb.png" width="75%">
+                    <img src="../photo/pagetabletlb.png" width="70%">
                 <hr>
                 <h2 style="text-align:center;">Multilevel paging: 假設每個 page table 剛好佔一個 page</h2>
                 <h3 style="text-align:center;text-decoration: underline;">「每個 page table 剛好佔一個 page」的設計，使得記憶體配置、位址切割、硬體查表與效能實作都能保持規則、對齊、且高效。</h3>
@@ -290,6 +290,8 @@
                             </tbody>
                         </table>
                     </div>
+                    <hr>
+                        <img src="../photo/fibonacciheap.png" width="65%">
                     <hr>
                         <div style="display: inline-block; text-align: left;">
                             基本上這世界上的問題可以分類為：<br>
