--- a/html/blog.html
+++ b/html/blog.html
@@ -303,6 +303,7 @@
                         <h4>若\(\text{A}&le;_p\text{B}\), 則\(\text{B}\)為polynomial-time solvable \(\implies \) \(\text{A}\)為polynomial-time solvable</h4>
                         <h4>若\(&exist;\)一個\(\text{NP-complete}\)的問題為polynomial-time solvable, 則\(\text{P}&equals;\text{NP}\)</h4>
                         <div style="display: inline-block; text-align: left;">
+                            <h4>P:\(A \in \text{P} \), \(\text{B}&le;_p\text{A}\), 則\(\text{B}\)為P</h4>
                             <h4>NP-hard:\( \forall A \in \text{NP} \), \(\text{A}&le;_p\text{B}\), 則\(\text{B}\)為NP-hard</h4>
                             <h4>NP-complete:若\(A \in \text{NP} \)且\(\text{A}\)為NP-hard, 則\(\text{A}\)為NP-complete</h4>
                         </div>
