--- a/html/blog.html
+++ b/html/blog.html
@@ -182,9 +182,10 @@
                         <h3>\(log(n!)=&Theta;(nlogn)\)</h3>
                         <h3>\(H(n)=1+1/2+1/3+1/4+...+1/n,&forall; n \in \mathbb{Z}^{+} , H(n)=&Theta;(logn)\)</h3>
                     <hr>
+                        <h3>Methods of Proof:  \(\text{direct method, contrapositive method}(P \implies Q \equiv \neg Q \implies \neg P \equiv \neg P \lor Q) \text{and contradiction method(反證法)}\)</h3>
                         <h3>Open interval: \( \{ x \mid a < x < b \} \), 以\(\left( a,b \right)\)表示之, a ○───────○ b</h3>
                         <h3>Closed interval: \( \{ x \mid a \le x \le b \} \), 以\(\left[ a,b \right]\)表示之,  a ●───────● b</h3>
-                        <h3>For two arbitrary <span style="color: blue">infinitely countable</span> sets A and B, both \(2^A\) and \(2^B\) are <span style="color: blue">uncountable</span>.</h3>
+                        <h3>Cantor's Theorem:For two arbitrary <span style="color: blue">infinitely countable</span> sets A and B, both \(2^A\) and \(2^B\) are <span style="color: blue">uncountable</span>.</h3>
                         <h2 style="text-align:center;">Truth Table</h2>
                         <div class="table-container">
                             <table>
