--- a/html/blog.html
+++ b/html/blog.html
@@ -182,6 +182,7 @@
                         <h3>\(log(n!)=&Theta;(nlogn)\)</h3>
                         <h3>\(H(n)=1+1/2+1/3+1/4+...+1/n,&forall; n \in \mathbb{Z}^{+} , H(n)=&Theta;(logn)\)</h3>
                     <hr>
+                        <h3><u>gcd is associative on integer:gcd(gcd(a,b),c)=gcd(a,gcd(b,c)).</u>set difference(-),division(/),implication(->),cartesian product(x) is not associative.</h3>
                         <h3>Methods of Proof:  \(\text{direct method, contrapositive method}(P \implies Q \equiv \neg Q \implies \neg P \equiv \neg P \lor Q) \text{and contradiction method(反證法)}\)</h3>
                         <h3>Open interval: \( \{ x \mid a < x < b \} \), 以\(\left( a,b \right)\)表示之, a ○───────○ b</h3>
                         <h3>Closed interval: \( \{ x \mid a \le x \le b \} \), 以\(\left[ a,b \right]\)表示之,  a ●───────● b</h3>
