--- a/html/中興.html
+++ b/html/中興.html
@@ -10,36 +10,64 @@
   <table>
     <tr>
         <th>科目</th>
-        <th>基礎數學</th>
+        <th>資料結構與演算法</th>
+        <th>計算機組織與作業系統</th>
+        <th>離散數學與線性代數</th>
         <th>資訊概論</th>
         <th>總分</th>
     </tr>
     <tr>
+        <th>103</th>
+        <td></td >
+        <td></td >
+        <td></td >
+        <td></td >
+        <td></td >
+    </tr>
+    <tr>
+        <th>104</th>
+        <td></td >
+        <td></td >
+        <td></td >
+        <td></td >
+        <td></td >
+    </tr>
+    <tr>
         <th>105</th>
+        <td></td >
+        <td></td >
         <td>38</td >
         <td>67</td >
         <td>105</td >
     </tr>
     <tr>
         <th>106</th>
+        <td></td >
+        <td></td >
         <td>59</td >
         <td>72</td >
         <td>131</td >
     </tr>
     <tr>
         <th>107</th>
+        <td></td >
+        <td></td >
         <td>60</td >
         <td>90</td >
         <td>150</td >
     </tr>
     <tr>
         <th>108</th>
+        <td></td >
+        <td></td >
         <td>66</td >
         <td>53</td >
         <td>119</td >
     </tr>
     <tr>
         <th>109</th>
+        <td></td >
+        <td></td >
         <td>67</td >
         <td>62</td >
         <td>129</td >
@@ -49,9 +77,13 @@
         <td></td >
         <td></td >
         <td></td >
+        <td></td >
+        <td></td >
     </tr>
     <tr>
         <th>111</th>
+        <td></td >
+        <td></td >
         <td></td >
         <td></td >
         <td></td >
@@ -61,15 +93,21 @@
         <td></td >
         <td></td >
         <td></td >
+        <td></td >
+        <td></td >
     </tr>
     <tr>
         <th>113</th>
         <td></td >
         <td></td >
         <td></td >
+        <td></td >
+        <td></td >
     </tr>
     <tr>
         <th>114</th>
+        <td></td >
+        <td></td >
         <td></td >
         <td></td >
         <td></td >
