--- a/html/臺北.html
+++ b/html/臺北.html
@@ -2,17 +2,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>政大</title>
+  <title>臺北</title>
   <link rel="stylesheet" href="../css/subprogress.css">
 </head>
 <body>
-    <h2>政大</h2>
+    <h2>臺北</h2>
   <table>
     <tr>
         <th>科目</th>
-        <th>資料結構及演算法</th>
-        <th>作業系統</th>
-        <th>計算機數學</th>
+        <th>資料結構與演算法</th>
+        <th>線性代數與離散數學</th>
         <th>總分</th>
     </tr>
     <tr>
@@ -20,84 +19,72 @@
         <td></td >
         <td></td >
         <td></td >
-        <td></td>
     </tr>
     <tr>
         <th>104</th>
         <td></td >
         <td></td >
         <td></td >
-        <td></td>
     </tr>
     <tr>
         <th>105</th>
         <td></td >
         <td></td >
         <td></td >
-        <td></td>
     </tr>
     <tr>
         <th>106</th>
         <td></td >
         <td></td >
         <td></td >
-        <td></td>
     </tr>
     <tr>
         <th>107</th>
         <td></td >
         <td></td >
         <td></td >
-        <td></td>
     </tr>
     <tr>
         <th>108</th>
         <td></td >
         <td></td >
         <td></td >
-        <td></td>
     </tr>
     <tr>
         <th>109</th>
         <td></td >
         <td></td >
         <td></td >
-        <td></td>
     </tr>
     <tr>
         <th>110</th>
         <td></td >
         <td></td >
         <td></td >
-        <td></td>
     </tr>
     <tr>
         <th>111</th>
         <td></td >
         <td></td >
         <td></td >
-        <td></td>
     </tr>
     <tr>
         <th>112</th>
         <td></td >
         <td></td >
         <td></td >
-        <td></td>
     </tr>
     <tr>
         <th>113</th>
         <td></td >
         <td></td >
         <td></td >
-        <td></td>
     </tr>
     <tr>
         <th>114</th>
         <td></td >
         <td></td >
         <td></td >
-        <td></td>
     </tr>
     
   </table>
