os,ds tidy up-3

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <div id="notes-list" class="notes-list">
             <a href="notes/network.pdf">Network</a>
             <a href="notes/LA.pdf">LinearAlgebra</a>
-            <a href="notes/os.pdf">OS</a>
+            <a href="notes/OS.pdf">OS</a>
+            <a href="notes/DS.pdf">DS</a>
             <a href="notes/system.pdf">System</a>
             <a href="notes/ai.pdf">AI</a>
         </div>
