--- a/html/progress.html
+++ b/html/progress.html
@@ -49,11 +49,11 @@
         <td>&#10004;</td ><!-- 107 -->
         <td>&#10004;</td ><!-- 108 -->
         <td>&#10004;</td ><!-- 109 -->
-        <td></td ><!-- 110 -->
-        <td></td ><!-- 111 -->
-        <td></td ><!-- 112 -->
-        <td></td ><!-- 113 -->
-        <td></td ><!-- 114 -->
+        <td>nan</td ><!-- 110 -->
+        <td>nan</td ><!-- 111 -->
+        <td>nan</td ><!-- 112 -->
+        <td>nan</td ><!-- 113 -->
+        <td>nan</td ><!-- 114 -->
     </tr>
     <tr>
         <th><a href="成大.html">成大</a></th>
@@ -147,18 +147,18 @@
     </tr>
     <tr>
         <th><a href=政大.html>政大</a></th>
-        <td></td ><!-- 103 -->
-        <td></td ><!-- 104 -->
+        <td>&#10008;</td ><!-- 103 -->
+        <td>&#10008;</td ><!-- 104 -->
         <td>&#10004;</td ><!-- 105 -->
-        <td></td ><!-- 106 -->
-        <td></td ><!-- 107 -->
-        <td></td ><!-- 108 -->
-        <td></td ><!-- 109 -->
-        <td></td ><!-- 110 -->
-        <td></td ><!-- 111 -->
-        <td></td ><!-- 112 -->
-        <td></td ><!-- 113 -->
-        <td></td ><!-- 114 -->
+        <td>&#10008;</td ><!-- 106 -->
+        <td>&#10008;</td ><!-- 107 -->
+        <td>&#10008;</td ><!-- 108 -->
+        <td>&#10008;</td ><!-- 109 -->
+        <td>&#10008;</td ><!-- 110 -->
+        <td>&#10008;</td ><!-- 111 -->
+        <td>&#10008;</td ><!-- 112 -->
+        <td>&#10008;</td ><!-- 113 -->
+        <td>&#10008;</td ><!-- 114 -->
     </tr>
     <tr>
         <th><a href="師大.html">師大</a></th>
@@ -192,10 +192,10 @@
     </tr>
     <tr>
         <th><a href="臺北.html">臺北</a></th>
-        <td></td ><!-- 103 -->
-        <td></td ><!-- 104 -->
-        <td></td ><!-- 105 -->
-        <td></td ><!-- 106 -->
+        <td>nan</td ><!-- 103 -->
+        <td>nan</td ><!-- 104 -->
+        <td>nan</td ><!-- 105 -->
+        <td>nan</td ><!-- 106 -->
         <td>&#10004;</td ><!-- 107 -->
         <td></td ><!-- 108 -->
         <td></td ><!-- 109 -->
