--- a/html/blog.html
+++ b/html/blog.html
@@ -235,6 +235,7 @@
                         <img src="../photo/Surjection_Injection_Bijection-fr.svg">
                         <span style="display: inline-block; text-align: left;white-space: pre;"><h3>(a)\(onto: \forall \text{y} \in \text{Y}, &exist; \text{x} \in \text{X } \text{s.t.} \text{ f(x)=y}\)          (b)\(1-1: f(x_1)=f(x_2) \implies x_1=x_2\)</h3></span>
                         <img src="../photo/properties-numbers.png">
+                        <img src="../photo/precision&accuracy.png" width="50%">
                     <hr>
                         <h4>Different types of distances used in ML</h4>
                         <p><b>Minkowski distance:</b></p>
