--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div id="notes-list" class="notes-list">
             <a href="notes/network.pdf">Network</a>
             <a href="notes/LA.pdf">LinearAlgebra</a>
+            <a href="notes/DM.pdf">DiscreteMath</a>
             <a href="notes/os.pdf">OS</a>
             <a href="notes/DS.pdf">DS</a>
             <a href="notes/system.pdf">System</a>
